@@ -3,7 +3,9 @@ include $(top_srcdir)/Makefile.decl
 INCLUDES = \
     $(GDK_CFLAGS) \
     -I$(top_srcdir)/protocol \
-    -DSAPWOOD_SERVER=\"$(daemondir)/sapwood-server\"
+    -DSAPWOOD_SERVER=\"$(daemondir)/sapwood-server\" \
+    -DG_LOG_DOMAIN=\"sapwood-server\" \
+    $(NULL)
 
 daemondir = $(libdir)/sapwood
 daemon_PROGRAMS = sapwood-server
